# kube-whisperer

./: .coveragerc  .gitignore  Dockerfile  LICENSE  Makefile  README.md  clean.sh  conftest.py  enhancements.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: docker-publish.yml
k8s/: acr-secret.yaml  kube-whisperer.yaml  whisper-custom.yaml  whisper-prebuilt-cpu.yaml  whisper-prebuilt.yaml
scripts/: concurrent_requests_test.sh  single_request_test.sh  test_scaling.sh
src/: __init__.py  config.py  logging_setup.py  serve.py  utils.py
test/: config.json  options.json
tests/: test_config.py  test_logging.py
tests/api/: test_transcription.py
tests/integration/: test_serve.py
tests/unit/: conftest.py  test_config.py  test_logging.py  test_utils.py
utils/: run_tests.sh
