[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kube-whisperer"
version = "0.1.0"
description = "A Kubernetes-native Whisper service"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.2",
    "uvicorn[standard]==0.27.1",
    "pydantic==2.6.1",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.9",
    "openai-whisper==20231117",
    "torch==2.2.0",
    "numpy==1.26.4",
    "soundfile==0.12.1",
    "prometheus-client==0.19.0",
    "structlog==24.1.0",
    "psutil==5.9.8",
    "python-magic==0.4.27",
    "aiofiles==23.2.1",
    "tenacity==8.2.3",
    "prometheus-fastapi-instrumentator==6.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = false 